[tool.poetry]
name = "lhn-fatties"
version = "0.1.0"
description = "Dashboard notebook for lhn fatty data"
authors = ["Steven Jackson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
voila = "0.2.16"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
ipywidgets = "^7.6.5"
plotly = "^5.5.0"
ipyvuetify = "^1.8.1"
voila-vuetify = "^0.5.2"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
black = "mypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
